# macs-research

./: README.md  pyproject.toml
src/macs/: cli.py  main.py  registry_loader.py
src/macs/agents/: base.py  impact_analyzer.py  impact_analyzer_agent.py  orchestrator_agent.py  recommendation_expert.py  recommendation_expert_agent.py  registry.py  vuln_researcher.py  vulnerability_research_agent.py  vulnerability_researcher.py
src/macs/config/: agent.py  graph.py  llm.py  llm_clients.py  provider.py  tools.py
src/macs/crew/: crew.py  task.py
src/macs/graph/: base.py  graph_builder.py  registry.py  vuln_research.py  vuln_system_state.py
src/macs/llm/: base.py  ollama.py  registry.py
src/macs/llm_clients/: base.py  ollama.py  registry.py
src/macs/prompts/: impact_analyzer.j2  recommendation_expert.j2  vuln_researcher.j2
src/macs/provider/: base.py  ollama.py  registry.py
src/macs/tests/: test_agents.py  test_tools.py
src/macs/tools/: args_wrappers.py  registry.py  scrape_tool.py  scrape_website.py  scrape_website_tool.py  search_tool.py  serper_search.py  serper_search_tool.py  travily_search.py  travily_search_tool.py  website_qa.py  website_qa_tool.py  website_search_tool.py
tests/: test_agents.py  test_tools.py
