[tool.poetry]
name = "macs-research"
version = "0.1.0"
description = ""
authors = ["Maxim Borodynya <borody.maxim@gmail.com>"]
readme = "README.md"
packages = [
    { include = "macs", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.3.23"
langchain-ollama = "^0.3.2"
langchain-community = "^0.3.21"
beautifulsoup4 = "^4.13.4"
html2text = "^2025.4.15"
faiss-cpu = "^1.10.0"
sentence-transformers = "^4.1.0"
crewai = {extras = ["tools"], version = "^0.114.0"}
langchain-huggingface = "^0.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
